# randocha

./: .editorconfig  CMakeLists.txt  README.md  build-generate.bat  build.bat  build.sh  clean.bat
include/: randocha.h
source/: bench.cpp  csv_exporter.cpp  distribution_viz.cpp  rand_mt.h  rand_sse.h  rand_tea.h
